# temp_sensor

./: .config.ini  .gitignore  Altair_intro.ipynb  README.md  config.ini  dashboard.sh  io_funcs.py  params.ini  pyproject.toml  requirements.txt  senstemp.sh  streamlit_test.py  streamlit_test2.py  templog.csv  templog.h5  tempsensor.csv  tempsensor.py  test.ipynb  test.py  test_me.py  venv.sh
dashboard/: app.py  app_testing.py  app_torn.py
