[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempsens"
version = "0.1"
authors = [
  { name="Simen Bruøygard", email="simen.bruoy@gmail.com" },
]
description = """A package for 
logging temperature via a Ras Pi 
and uploading it to a central database.
"""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "shiny",
    "numpy",
    "adafruit_dht",
    "pandas",
    
]

# [project.urls]
# Homepage = 
# Issues = 

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.hatch.build.targets.wheel]
autodiscover = true
